--- a/day9.10.11/css/index.css
+++ b/day9.10.11/css/index.css
@@ -158,6 +158,7 @@ em {
     padding-left: 22px;
     width: 270px;
     height: 50px;
+    margin-right: 24px;
     border: solid 1px #5A534D;
     background-color: rgba(0, 0, 0, .2);
     border-radius: 3%;
